# mata

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix
.nix/: ci.shell.nix  develop.shell.nix  package.nix
commands/: posts.go  sync.go
src/: main.rs
